--- a/static/css/yotsuba_b.css
+++ b/static/css/yotsuba_b.css
@@ -167,7 +167,9 @@ button i{
     color: var(--bs-body-color);
     background-color: var(--bs-thread-title-bg);
     padding: 0px 5px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
     border-radius: 3px;
     border: 1px var(--bs-thread-title-border) solid;
 }
@@ -275,4 +277,17 @@ a.chan-thread-title{
 
 .custom-table th, .custom-table td {
     border-bottom:  1px solid rgba(255, 255, 255, 0);
+}
+
+.spoiler {
+    background-color: black;
+    color: black;
+    border-radius: 2px;
+    padding: 0 2px;
+    font-weight: normal;
+    transition: all 0.1s;
+}
+
+.spoiler:hover {
+    color: rgb(255, 255, 255);
 }
