--- a/templates/board.html
+++ b/templates/board.html
@@ -167,8 +167,8 @@
                             <div id="r{{ reply.id }}" class="chan-{{ 'admin-' if reply.type == 1 }}thread-info d-flex flex-column" style="min-width: 350px; margin-left: {{ 20 * level }}px; width: fit-content;">
                                 <div class="d-flex justify-content-start align-content-start gap-1">
                                     <div class="d-flex gap-1 align-items-center justify-content-start m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
-                                        <span class="m-0" style="font-size: 0.7rem; {{ 'color: rgba(255, 255, 255, 0.700);' if reply.type == 0 else 'color: rgba(0, 255, 136);' }}">
-                                            {{ 'Admin:' if reply.type == 1 else 'User:' }}
+                                        <span class="m-0 fw-bold" style="font-size: 0.7rem; {{ 'color: rgba(255, 255, 255, 0.700);' if reply.type == 0 else 'color: rgba(0, 255, 136);' }}">
+                                            {{ 'Admin:' if reply.type == 1 else 'Anon:' }}
                                         </span>
                                         <span class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
                                             {{ reply.user_token }}
@@ -353,7 +353,7 @@
                                         <div class="d-flex gap-2">
                                             <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                                             <div class="d-flex flex-column justify-content-around">
-                                                <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ thread.user_token }}</p>
+                                                <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);"><span class="fw-bold">Anon:</span> {{ thread.user_token }}</p>
                                                 <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
                                             </div>
                                         </div>
@@ -430,7 +430,7 @@
                                         <div class="d-flex gap-2">
                                             <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500;">{{ thread.title }}</a>
                                             <div class="d-flex flex-column justify-content-around">
-                                                <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ thread.user_token }}</p>
+                                                <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);"><span class="fw-bold">Anon:</span> {{ thread.user_token }}</p>
                                                 <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
                                             </div>
                                         </div>
@@ -499,7 +499,7 @@
                                         <div class="d-flex gap-2">
                                             <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                                             <div class="d-flex flex-column justify-content-around">
-                                                <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ thread.user_token }}</p>
+                                                <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);"><span class="fw-bold">Anon:</span> {{ thread.user_token }}</p>
                                                 <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
                                             </div>
                                         </div>
