--- a/templates/thread.html
+++ b/templates/thread.html
@@ -192,7 +192,7 @@
                         
                         <div id="t{{ thread.id }}" class="chan-admin-thread-info border-info-subtle" style="min-width: 350px; width: fit-content; min-width: 200px;">
                             <div class="d-flex gap-2">
-                                <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
+                                <p class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" style="font-weight: 500; text;">{{ thread.title }}</p>
                                 <div class="d-flex flex-column justify-content-around">
                                     <div class="d-flex align-items-center gap-1">
                                         <p class="m-0" style="font-size: 0.7rem; color: rgba(0, 255, 136);"><span class="fw-bold">Admin:</span></p>
@@ -253,7 +253,7 @@
                         
                         <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 350px; width: fit-content;">
                             <div class="d-flex gap-2">
-                                <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
+                                <p class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" style="font-weight: 500; text;">{{ thread.title }}</p>
                                 <div class="d-flex flex-column justify-content-around">
                                     <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);"><span class="fw-bold">Anon:</span> {{ thread.user_token }}</p>
                                     <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
