--- a/static/css/tomorrow.css
+++ b/static/css/tomorrow.css
@@ -33,7 +33,16 @@
     --bs-red-text: rgb(255, 18, 58); /* Red text */
 }
 
+.ants-link{
+    border: 1px solid transparent !important;
+}
 
+.ants-link:hover{
+    border: 1px solid transparent !important;
+    border-image: url(../img/ants.gif) 1 repeat !important;
+    color: #ffffff !important;
+    background-color: #000000a6 !important;
+}
 
 a.chan-thread-title{
     background-color: rgba(0, 0, 0, 0.2);
